<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundblue"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/MainTextStyle"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/margarine"
            android:text="@string/title_text"
            android:textColor="#1B5E20"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/chewy"
            android:text="@string/out_of_text"
            android:textColor="#455A64"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#004456"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/question_category_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/category_placeholder"
                        android:textColor="#BCAAA4"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/question_difficulty_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/difficulty_placeholder"
                        android:textColor="#BCAAA4"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/question_text_view"
                    style="@style/MainTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/question_text_padding"
                    android:paddingEnd="@dimen/question_text_padding"
                    android:text="@string/placeholder"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/first_answer_button"
            style="@style/button_style"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/TRUE_BUTTON"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/second_answer_button"
            style="@style/button_style"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/FALSE_BUTTON"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_answer_button" />

        <Button
            android:id="@+id/third_answer_button"
            style="@style/button_style"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/button_placeholder_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_answer_button" />

        <Button
            android:id="@+id/fourth_answer_button"
            style="@style/button_style"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/button_placeholder_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/third_answer_button" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/title_text"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/braintransparent" />

        <TextView
            android:id="@+id/currentScore_text"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="103dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chewy"
            android:text="@string/score_placeholder"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FA0000"
            android:text="@string/SKIP_BUTTON"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourth_answer_button" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1D8F23"
            android:text="@string/share_button_text"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourth_answer_button" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/home_button_text"
            app:chipIcon="@drawable/baseline_home_24"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_text"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>